--- a/package.json
+++ b/package.json
@@ -10,9 +10,28 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/bottom-tabs": "^7.3.16",
+    "@react-navigation/drawer": "^7.4.3",
+    "@react-navigation/native": "^7.1.12",
+    "@react-navigation/stack": "^7.3.5",
+    "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "react": "19.0.0",
-    "react-native": "0.79.3"
+    "react-native": "0.79.3",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.26.0",
+    "react-native-paper": "^5.14.5",
+    "react-native-reanimated": "^3.18.0",
+    "react-native-safe-area-context": "^5.4.1",
+    "react-native-screens": "^4.11.1",
+    "react-native-sound": "^0.11.2",
+    "react-native-svg": "^15.12.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-redux": "^9.2.0",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
