--- a/app.json
+++ b/app.json
@@ -1,4 +1,21 @@
 {
+  "expo": {
+    "name": "studyMateFrontApp",
+    "slug": "studyMateFrontApp",
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "userInterfaceStyle": "light",
+    "assetBundlePatterns": [
+      "**/*"
+    ],
+    "ios": {
+      "supportsTablet": true,
+      "jsEngine": "jsc"
+    },
+    "android": {
+      "jsEngine": "jsc"
+    }
+  },
   "name": "studyMateFrontApp",
   "displayName": "studyMateFrontApp"
 }
