--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.16",
     "@react-navigation/drawer": "^7.4.3",
     "@react-navigation/native": "^7.1.12",
@@ -18,17 +18,18 @@
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
+    "expo": "^53.0.12",
     "react": "19.0.0",
-    "react-native": "0.79.3",
+    "react-native": "^0.79.4",
     "react-native-chart-kit": "^6.12.0",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "^2.26.0",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "^5.14.5",
-    "react-native-reanimated": "^3.18.0",
+    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.11.1",
     "react-native-sound": "^0.11.2",
-    "react-native-svg": "^15.12.0",
+    "react-native-svg": "^15.11.2",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0",
     "zustand": "^5.0.5"
@@ -45,13 +46,13 @@
     "@react-native/metro-config": "0.79.3",
     "@react-native/typescript-config": "0.79.3",
     "@types/jest": "^29.5.13",
-    "@types/react": "^19.0.0",
+    "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "19.0.0",
-    "typescript": "5.0.4"
+    "typescript": "~5.8.3"
   },
   "engines": {
     "node": ">=18"
