--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo": "^53.0.12",
     "react": "19.0.0",
     "react-native": "^0.79.4",
+    "react-native-calendars": "^1.1312.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.24.0",
@@ -47,6 +48,7 @@
     "@react-native/typescript-config": "0.79.3",
     "@types/jest": "^29.5.13",
     "@types/react": "~19.0.10",
+    "@types/react-native-calendars": "^1.1264.7",
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
