--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "react-native-svg": "^15.11.2",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0",
-    "zustand": "^5.0.5"
+    "zustand": "^5.0.5",
+    "react-dom": "19.0.0",
+    "react-native-web": "^0.20.0",
+    "@expo/metro-runtime": "~5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
