--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.16",
     "@react-navigation/drawer": "^7.4.3",
@@ -20,6 +21,7 @@
     "date-fns": "^4.1.0",
     "expo": "^53.0.12",
     "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "^0.79.4",
     "react-native-calendars": "^1.1312.1",
     "react-native-chart-kit": "^6.12.0",
@@ -32,11 +34,9 @@
     "react-native-sound": "^0.11.2",
     "react-native-svg": "^15.11.2",
     "react-native-vector-icons": "^10.2.0",
-    "react-redux": "^9.2.0",
-    "zustand": "^5.0.5",
-    "react-dom": "19.0.0",
     "react-native-web": "^0.20.0",
-    "@expo/metro-runtime": "~5.0.4"
+    "react-redux": "^9.2.0",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
