--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "expo": "^53.0.12",
+    "expo-av": "^16.0.7",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "^0.79.4",
